    - Removed potential NullPointerException in SearchExpressionTreeParser.
2.7 beta
    - Some improvements to MS Office export filter.
    - Introduced three choices for ensuring unique generated keys. The default one (marking
      with a, b, etc.), a modified one (marking with b, c, etc.) and always adding a letter
      (a, b, etc.).
    - Font and background colors are now customizable in the entry editor (Options ->
      Preferences -> Appearance).
    - Window title now includes the full path to the current file.
    - Entries can now be marked in a series of different colors. Automarking of imported
      entries is now done in separate color without affecting other marked entries.
    - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
      search for duplicate keys and offer to generate new keys to resolve the duplicates.
      Instead of being listed in a warning dialog after opening a bib file, duplicate keys
      now trigger a dialog asking whether the user wants to resolve the duplicates.
    - Added check that ensures that application doesn't quit while a large save operation
      is still in progress. Shows wait message with cancel button.
    - Added apostrophe (') as illegal character in BibTeX keys.
    - BibTeX strings that refer each other are now sorted correctly when saving bib file.
    - Fixed bug in merging external changes - file would still be reported as modified
      externally after merging changes.
    - Fixed bug in Move/rename file link feature that could cause the wrong link to be
      stored for certain directory structures.
    - Fixed bug: curly braces can now be used in arguments to formatters. 
    - Fixed lockup bug when generating key for entries with crossref fields.
    - BibTeX strings are now resolved before attempting to (un)abbreviate journal names.
    - Modified [shorttitle] and [veryshorttitle] key generator markers so they consider